--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -288,15 +288,16 @@ LastLevel=/Game/Maps/L_Entry
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -346,7 +347,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Art/Materials/Colors
+ContentBrowserTab1.SelectedPaths=/Game/Art/Meshes/Enviroment
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -623,6 +624,7 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
@@ -1045,7 +1047,6 @@ EditableText.Rendering=True
 EditableText.Navigation=True
 EditableText.Localization=True
 EditableText.Events=True
-UMGEditorProjectSettings.Designer =True
 Tab_Camera_C.Layout=True
 Tab_Camera_C.Appearance=True
 Tab_Camera_C.Input=True
@@ -1238,6 +1239,16 @@ VolumetricCloud.Cooking=True
 VolumetricCloud.Replication=True
 VolumetricCloud.Networking=True
 VolumetricCloud.Actor=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1258,24 +1269,25 @@ GameMapsSettings=True
 InputSettings=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Art/Textures/Grids/Diffuse_Hex_Tiles_Mat
-MRUItem1=/Game/Art/Materials/ColorsWithTexture/MI_Triangle_Line
-MRUItem2=/Game/Art/Materials/ColorsWithTexture/MI_Hexagon_Line
-MRUItem3=/Game/Art/Materials/ColorsWithTexture/MI_Square_Line
-MRUItem4=/Game/Art/Materials/M_Color_WithTexture
-MRUItem5=/Game/Art/Materials/Colors/MI_Red_01
-MRUItem6=/Game/Art/Materials/Colors/MI_Green_01
-MRUItem7=/Game/Art/Materials/Colors/MI_Blue
-MRUItem8=/Game/Art/Materials/M_Color
-MRUItem9=/Game/Blueprints/DebugMenu/Tabs/Tab_ConsoleCommands
-MRUItem10=/Game/Blueprints/DebugMenu/Widgets/Btn_ConsoleCommand
-MRUItem11=/Game/Blueprints/DebugMenu/Widgets/SpinBox_WithName
-MRUItem12=/Game/Blueprints/DebugMenu/W_DebugMenu
-MRUItem13=/Game/Blueprints/DebugMenu/Tabs/Tab_Camera
-MRUItem14=/Game/Blueprints/Core/Player/BP_Pawn
-MRUItem15=/Game/Blueprints/DebugMenu/BP_DebugMenu
-MRUItem16=/Game/Blueprints/Core/Player/BP_GM
-MRUItem17=/Game/Blueprints/Core/Player/BP_PC
+MRUItem0=/Game/Art/Meshes/Enviroment/Hex_Tiles_Group
+MRUItem1=/Game/Art/Textures/Grids/Diffuse_Hex_Tiles_Mat
+MRUItem2=/Game/Art/Materials/M_Color_WithTexture
+MRUItem3=/Game/Art/Materials/Colors/MI_Red_01
+MRUItem4=/Game/Art/Materials/Colors/MI_Green_01
+MRUItem5=/Game/Art/Materials/M_Color
+MRUItem6=/Game/Art/Materials/Colors/MI_Blue
+MRUItem7=/Game/Art/Materials/ColorsWithTexture/MI_Triangle_Line
+MRUItem8=/Game/Art/Materials/ColorsWithTexture/MI_Hexagon_Line
+MRUItem9=/Game/Art/Materials/ColorsWithTexture/MI_Square_Line
+MRUItem10=/Game/Blueprints/DebugMenu/Tabs/Tab_ConsoleCommands
+MRUItem11=/Game/Blueprints/DebugMenu/Widgets/Btn_ConsoleCommand
+MRUItem12=/Game/Blueprints/DebugMenu/Widgets/SpinBox_WithName
+MRUItem13=/Game/Blueprints/DebugMenu/W_DebugMenu
+MRUItem14=/Game/Blueprints/DebugMenu/Tabs/Tab_Camera
+MRUItem15=/Game/Blueprints/Core/Player/BP_Pawn
+MRUItem16=/Game/Blueprints/DebugMenu/BP_DebugMenu
+MRUItem17=/Game/Blueprints/Core/Player/BP_GM
+MRUItem18=/Game/Blueprints/Core/Player/BP_PC
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" "
@@ -1329,6 +1341,7 @@ MaterialEditorInstanceConstant=
 /Game/Art/Materials/Colors/MI_Red_01.MI_Red_01=0
 /Game/Art/Materials/M_Color_WithTexture.M_Color_WithTexture=0
 /Game/Art/Textures/Grids/Diffuse_Hex_Tiles_Mat.Diffuse_Hex_Tiles_Mat=0
+/Game/Art/Meshes/Enviroment/Hex_Tiles_Group.Hex_Tiles_Group=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2609,7 +2622,6 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -2729,7 +2741,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
