--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -288,20 +288,20 @@ LastLevel=/Game/Maps/L_Entry
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -310,6 +310,8 @@ OpenAssetsAtExit=/Game/Art/Materials/M_Color.M_Color
 OpenAssetsAtExit=/Game/Art/Materials/Colors/MI_Green_01.MI_Green_01
 OpenAssetsAtExit=/Game/Art/Materials/Colors/MI_Red_01.MI_Red_01
 OpenAssetsAtExit=/Game/Art/Materials/M_Color_WithTexture.M_Color_WithTexture
+OpenAssetsAtExit=/Game/Blueprints/DebugMenu/Tabs/Tab_ConsoleCommands.Tab_ConsoleCommands
+OpenAssetsAtExit=/Game/Blueprints/DebugMenu/Tabs/Tab_Camera.Tab_Camera
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1249,6 +1251,8 @@ StaticMesh.Navigation=True
 MaterialMergeOptions.OutputMaterialSettings=True
 MaterialOptions.MeshSettings=True
 MaterialOptions.MaterialBakeSettings=True
+BP_DebugMenu_C.Default=True
+Tab_ConsoleCommands_C.Designer=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1269,23 +1273,24 @@ GameMapsSettings=True
 InputSettings=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Art/Materials/M_Color_WithTexture
-MRUItem1=/Game/Art/Materials/Colors/MI_Red_01
-MRUItem2=/Game/Art/Materials/Colors/MI_Green_01
-MRUItem3=/Game/Art/Materials/M_Color
-MRUItem4=/Game/Art/Materials/Colors/MI_Blue
-MRUItem5=/Game/Art/Materials/ColorsWithTexture/MI_Triangle_Line
-MRUItem6=/Game/Art/Materials/ColorsWithTexture/MI_Hexagon_Line
-MRUItem7=/Game/Art/Materials/ColorsWithTexture/MI_Square_Line
-MRUItem8=/Game/Blueprints/DebugMenu/Tabs/Tab_ConsoleCommands
-MRUItem9=/Game/Blueprints/DebugMenu/Widgets/Btn_ConsoleCommand
-MRUItem10=/Game/Blueprints/DebugMenu/Widgets/SpinBox_WithName
-MRUItem11=/Game/Blueprints/DebugMenu/W_DebugMenu
-MRUItem12=/Game/Blueprints/DebugMenu/Tabs/Tab_Camera
-MRUItem13=/Game/Blueprints/Core/Player/BP_Pawn
-MRUItem14=/Game/Blueprints/DebugMenu/BP_DebugMenu
-MRUItem15=/Game/Blueprints/Core/Player/BP_GM
-MRUItem16=/Game/Blueprints/Core/Player/BP_PC
+MRUItem0=/Game/Art/Textures/Grids/Squares_Diffuse_Texture_Mat
+MRUItem1=/Game/Blueprints/DebugMenu/Tabs/Tab_Camera
+MRUItem2=/Game/Blueprints/DebugMenu/Tabs/Tab_ConsoleCommands
+MRUItem3=/Game/Blueprints/DebugMenu/BP_DebugMenu
+MRUItem4=/Game/Art/Materials/M_Color_WithTexture
+MRUItem5=/Game/Art/Materials/Colors/MI_Red_01
+MRUItem6=/Game/Art/Materials/Colors/MI_Green_01
+MRUItem7=/Game/Art/Materials/M_Color
+MRUItem8=/Game/Art/Materials/Colors/MI_Blue
+MRUItem9=/Game/Art/Materials/ColorsWithTexture/MI_Triangle_Line
+MRUItem10=/Game/Art/Materials/ColorsWithTexture/MI_Hexagon_Line
+MRUItem11=/Game/Art/Materials/ColorsWithTexture/MI_Square_Line
+MRUItem12=/Game/Blueprints/DebugMenu/Widgets/Btn_ConsoleCommand
+MRUItem13=/Game/Blueprints/DebugMenu/Widgets/SpinBox_WithName
+MRUItem14=/Game/Blueprints/DebugMenu/W_DebugMenu
+MRUItem15=/Game/Blueprints/Core/Player/BP_Pawn
+MRUItem16=/Game/Blueprints/Core/Player/BP_GM
+MRUItem17=/Game/Blueprints/Core/Player/BP_PC
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" "
@@ -1293,8 +1298,8 @@ Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 RadialSlider="\"Object.Layout.Slot\" "
 Image="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
@@ -2571,11 +2576,11 @@ bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
 
 [PlacementMode]
-RecentlyPlaced=/Game/Art/Meshes/Enviroment/Square_Tiles.Square_Tiles;
 RecentlyPlaced=/Game/Art/Textures/Grids/Squares_Diffuse_Texture_Mat.Squares_Diffuse_Texture_Mat;
-RecentlyPlaced=/Game/Art/Textures/Grids/Squares_Diffuse_Texture.Squares_Diffuse_Texture;
 RecentlyPlaced=/Game/Art/Materials/Colors/MI_Green_01.MI_Green_01;
 RecentlyPlaced=/Game/Art/Materials/Colors/MI_Blue.MI_Blue;
+RecentlyPlaced=/Game/Art/Meshes/Enviroment/Square_Tiles.Square_Tiles;
+RecentlyPlaced=/Game/Art/Textures/Grids/Squares_Diffuse_Texture.Squares_Diffuse_Texture;
 RecentlyPlaced=/Game/Art/Meshes/Grid/Square_Tiles.Square_Tiles;
 RecentlyPlaced=/Game/Art/Meshes/Enviroment/Hex_Tiles_Group.Hex_Tiles_Group;
 RecentlyPlaced=/Game/Art/Textures/Grids/Diffuse_Hex_Tiles.Diffuse_Hex_Tiles;
