--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -288,6 +288,7 @@ LastLevel=/Game/Maps/L_Entry
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1345,6 +1346,7 @@ MaterialEditorInstanceConstant=
 /Game/Art/Materials/M_Color_WithTexture.M_Color_WithTexture=0
 /Game/Art/Textures/Grids/Diffuse_Hex_Tiles_Mat.Diffuse_Hex_Tiles_Mat=0
 /Game/Art/Meshes/Enviroment/Hex_Tiles_Group.Hex_Tiles_Group=1
+/Game/Art/Textures/Grids/Squares_Diffuse_Texture_Mat.Squares_Diffuse_Texture_Mat=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2632,7 +2634,6 @@ bSCCUseGlobalSettings=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
