--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -280,13 +280,13 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings.InputAxis_Rig
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.InputAxis_Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.InputAction_RotationRight,InputSettings.Bindings.ActionMappings.InputAction_RotationLeft
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.InputAxis_Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.InputAction_RotationRight,InputSettings.Bindings.ActionMappings.InputAction_RotationLeft
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
+MaterialInstanceConstant=
 
 [EditorStartup]
 LastLevel=/Game/Maps/L_Entry
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -347,7 +347,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Art/Meshes/Enviroment
+ContentBrowserTab1.SelectedPaths=/Game/Art/Textures/Grids
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1295,12 +1295,12 @@ MRUItem17=/Game/Blueprints/Core/Player/BP_PC
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" "
-Object=
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 RadialSlider="\"Object.Layout.Slot\" "
 Image="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
@@ -1308,7 +1308,7 @@ WidgetSwitcher="\"Object.Layout.Slot\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 W_DebugMenu_C=
-UserWidget=
+UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Btn_ConsoleCommand_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" "
 Overlay="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2634,6 +2634,7 @@ bSCCUseGlobalSettings=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2751,7 +2752,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
